--- a/MobyLabWebProgramming.Infrastructure/MobyLabWebProgramming.Infrastructure.csproj
+++ b/MobyLabWebProgramming.Infrastructure/MobyLabWebProgramming.Infrastructure.csproj
@@ -36,4 +36,8 @@
     <ProjectReference Include="..\MobyLabWebProgramming.Core\MobyLabWebProgramming.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
